// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsComponent With a config In Dev Mode should match the snapshot 1`] = `
<app-analytics
  config={[Function Object]}
  el={[Function _ElementRef]}
  platformService={[Function Object]}
>
</app-analytics>
`;

exports[`AnalyticsComponent With a config In the Browser should match the snapshot 1`] = `
<app-analytics
  config={[Function Object]}
  el={[Function _ElementRef]}
  platformService={[Function Object]}
>
</app-analytics>
`;

exports[`AnalyticsComponent With a config On the server should match the snapshot 1`] = `
<app-analytics
  config={[Function Object]}
  el={[Function _ElementRef]}
  platformService={[Function Object]}
>
  <script>
    (function (c, l, a, r, i, t, y) { c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments); }; t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i; y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y); })(window, document, "clarity", "script", "TEST_CLARITY");
  </script><script
    async=""
    src="https://www.googletagmanager.com/gtag/js?id=TEST_GTAG"
  /><script>
    window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); }
  </script>
</app-analytics>
`;

exports[`AnalyticsComponent Without a config In the Browser should match the snapshot 1`] = `
<app-analytics
  config={[Function Object]}
  el={[Function _ElementRef]}
  platformService={[Function Object]}
>
</app-analytics>
`;

exports[`AnalyticsComponent Without a config On the server should match the snapshot 1`] = `
<app-analytics
  config={[Function Object]}
  el={[Function _ElementRef]}
  platformService={[Function Object]}
>
</app-analytics>
`;
